.backup/API-GATEWAY/04.INGRESS/grafana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.pathmatcher: "/"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: insecure-transport
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: console.hypercloud.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
                  # name: https
            path: /api/grafana
            pathType: Prefix
  tls:
    - hosts:
        - console.hypercloud.com
      secretName: api-gateway-server-tls
